# ComfyUI_SHMT

./: LICENSE  README.md  SHMT_node.py  Workflow.json  __init__.py  makeup_inference_h0.py  makeup_inference_h4.py  makeup_inference_model2.py  node_utils.py  pyproject.toml  requirements.txt
THREEDDFA_V2/: TDDFA.py  demo.py  latency.py
THREEDDFA_V2/FaceBoxes/utils/: functions.py  nms_wrapper.py
THREEDDFA_V2/FaceBoxes/utils/nms/: cpu_nms.cp311-win_amd64.pyd  readme.txt  setup.py  编译说明.txt
THREEDDFA_V2/Sim3DR/: Sim3DR_Cython.cp311-win_amd64.pyd
THREEDDFA_V2/bfm/: bfm.py
THREEDDFA_V2/utils/: depth.py  pncc.py  render.py  uv.py
configs/latent-diffusion/: shmt_h0.yaml  shmt_h4.yaml
ldmx/: main.py
ldmx/data/: makeup_dataset.py
ldmx/models/: autoencoder.py  correspondence.py
ldmx/models/diffusion/: ddim.py  ddim_test.py  ddim_test_model2.py  ddpm.py  plms.py
ldmx/modules/diffusionmodules/: openaimodel.py
ldmx/modules/encoders/: modules.py
ldmx/modules/image_degradation/: bsrgan.py
ldmx/modules/losses/: contperceptual.py  vqperceptual.py
ldmx/taming/data/: faceshq.py  image_transforms.py  imagenet.py  utils.py
ldmx/taming/data/conditional_builder/: objects_bbox.py  objects_center_points.py
ldmx/taming/models/: cond_transformer.py  vqgan.py
ldmx/taming/modules/discriminator/: model.py
ldmx/taming/modules/losses/: vqperceptual.py
ldmx/taming/modules/transformer/: mingpt.py  wrapper.py
